Virtual Threads for the backoffice